# decoint-IEEE-1788.1-2017

./: CONFORMANCE.md  Conformance.md  arithmetic.py  interval.py  paper.bib  paper.md  pyproject.toml  rounding.py  usage.md
decoint/: decorated_functions.py  decorated_interval.py  decorations.py  functions.py  interval.py  rounding.py
interval/: arithmetic.py  constants.py  decorated_interval.py  decoration.py  functions.py  interval.py  rounding.py
testing/: test_edge_cases.py  test_random.py  utils.py
testing/test_cases/: test_lattice_ops.py  test_set_ops.py
