[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decoint"
version = "0.1.0"
description = "An IEEE 1788-2015 compliant interval arithmetic library"
dependencies = [
    "gmpy2",
]

[tool.setuptools.packages.find]
include = ["decoint*"]
exclude = ["testing*"]
